--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
 ---
 spring:
   profiles: local
-  datasource:
-    data: classpath:data-h2.sql
+#  datasource:
+#    data: classpath:data-h2.sql
   jpa:
     show-sql: true
     hibernate:
