--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,22 @@
+language: java
+jdk:
+  - openjdk8
+
+branches:
+  only:
+    - master
+
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.gradle'
+
+script: "./gradlew clean build"
+
+notifications:
+  email:
+    recipients:
+      - mslim8803@naver.com
 
 deploy:
   - provider: s3
